finished step8