@@ -1,46 +1,35 @@
 package hexlet.code;
 
-import java.nio.file.Path;
-import java.util.Comparator;
+import java.util.Arrays;
 import java.util.HashMap;
-import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 public class Differ {
 
-    private static final String REMOVE_PAIR = "- ";
-    private static final String ADD_PAIR = "+ ";
+    public static final String NO_VALUE = "noValue";
 
-    public static String generate(Path path1, Path path2) throws Exception {
-        var contentFromFirstFile = Parser.parseFile(path1);
-        var contentFromSecondFile = Parser.parseFile(path2);
-        return findDiff(contentFromFirstFile, contentFromSecondFile);
-    }
-
-    private static String findDiff(Map<String, String> json1, Map<String, String> json2) throws Exception {
-        Map<String, String> copyJson2 = new HashMap<>(json2);
-        Map<List<String>, String> diff = new LinkedHashMap<>();
+    public static Map<String, List<Object>> findDiff(Map<String, Object> json1, Map<String, Object> json2) {
+        // key to (was, became)
+        Map<String, List<Object>> diff = new HashMap<>();
         for (var keyValue1 : json1.entrySet()) {
-            if (copyJson2.containsKey(keyValue1.getKey())) {
-                if (copyJson2.get(keyValue1.getKey()).equals(keyValue1.getValue())) {
-                    diff.put(List.of("  ", keyValue1.getKey()), keyValue1.getValue());
-                } else {
-                    diff.put(List.of(REMOVE_PAIR, keyValue1.getKey()), keyValue1.getValue());
-                    diff.put(List.of(ADD_PAIR, keyValue1.getKey()), copyJson2.get(keyValue1.getKey()));
-                }
-                copyJson2.remove(keyValue1.getKey());
-            } else {
-                diff.put(List.of(REMOVE_PAIR, keyValue1.getKey()), keyValue1.getValue());
-            }
+            diff.put(
+                    keyValue1.getKey(),
+                    Arrays.asList(keyValue1.getValue(), json2.getOrDefault(keyValue1.getKey(), NO_VALUE))
+            );
         }
-        copyJson2.forEach((key, value) -> diff.put(List.of(ADD_PAIR, key), value));
-        StringBuilder builder = new StringBuilder("{\n");
-        diff.entrySet().stream().sorted(
-                        Comparator.comparing(entry -> entry.getKey().getLast()))
-                .forEach(entry -> builder.append(
-                        "  " + entry.getKey().getFirst() + entry.getKey().getLast() + ": " + entry.getValue() + "\n"));
-        builder.append("}");
-        return builder.toString();
+        diff.putAll(
+                json2.entrySet()
+                        .stream()
+                        .filter(entry -> !diff.containsKey(entry.getKey()))
+                        .collect(
+                                Collectors.toMap(
+                                        Map.Entry::getKey,
+                                        entry -> Arrays.asList(NO_VALUE, entry.getValue())
+                                )
+                        )
+        );
+        return diff;
     }
 }
